# CppSerialization

./: .appveyor.yml  .gitignore  .gitlinks  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  annotated.html  class_8cpp.html  class_8cpp_source.html  class_8h.html  class_8h_source.html  class_8inl.html  class_8inl_source.html  class_cpp_serialization_1_1_j_s_o_n_1_1_deserializer-members.html  class_cpp_serialization_1_1_j_s_o_n_1_1_deserializer.html  class_cpp_serialization_1_1_j_s_o_n_1_1_parser-members.html  class_cpp_serialization_1_1_j_s_o_n_1_1_parser.html  class_cpp_serialization_1_1_j_s_o_n_1_1_serializer-members.html  class_cpp_serialization_1_1_j_s_o_n_1_1_serializer.html  class_cpp_serialization_1_1_serialization_exception.html  class_cpp_template_1_1_template-members.html  class_cpp_template_1_1_template.html  classes.html  deserializer_8h.html  deserializer_8h_source.html  deserializer_8inl.html  deserializer_8inl_source.html  dir_0fe6c2563d536d7456f8aedf69d75e1b.html  dir_2d9f98fa70bbafc3e12475d4c13448c2.html  dir_465627cc71f3e49b12fba557f32be954.html  dir_4a340657cf19c81d758118f6e9dcf47f.html  dir_8ca93b2b940c9a551f45ac13d52034a8.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_bfc45e77520112b140cffab3214f7fed.html  dir_bff6d02009f7d25aef9b819d24c7d771.html  dir_d44c64559bbebec7f509842c48db8b23.html  domain_8h.html  domain_8h_source.html  (+78 more)
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos.yml  build-windows-cygwin.yml  build-windows-mingw.yml  build-windows-msys2.yml  build-windows-vs.yml  doxygen.yml
documents/: Doxyfile
documents/html/: class_cpp_serialization_1_1_j_s_o_n_1_1_deserializer.html  class_cpp_serialization_1_1_j_s_o_n_1_1_parser-members.html  class_cpp_serialization_1_1_j_s_o_n_1_1_parser.html  class_cpp_serialization_1_1_j_s_o_n_1_1_serializer-members.html  class_cpp_serialization_1_1_j_s_o_n_1_1_serializer.html  classes.html  deserializer_8h_source.html  deserializer_8inl.html  deserializer_8inl_source.html  dir_8ca93b2b940c9a551f45ac13d52034a8.html  dir_d44c64559bbebec7f509842c48db8b23.html  exceptions_8h.html  exceptions_8h_source.html  files.html  functions_func.html  hierarchy.html  json_8h.html  menudata.js  namespace_cpp_serialization.html  namespace_cpp_serialization_1_1_j_s_o_n.html  namespaces.html  parser_8h.html  parser_8h_source.html  parser_8inl.html  serializer_8h.html  serializer_8h_source.html  serializer_8inl.html  serializer_8inl_source.html  version_8h_source.html
documents/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_2.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js
domain/: domain.capnp  domain.fbe  domain.fbs  domain.h  domain.proto  domain_generated.h
domain/capnproto/: domain.capnp.c++  domain.capnp.h
domain/capnproto/domain/: domain.capnp.c++  domain.capnp.h
domain/fbe/: common.h  domain.h  fbe.h
domain/flatbuffers/: domain_generated.h
domain/protobuf/: domain.pb.cc  domain.pb.h
examples/: capnproto.cpp  domain.h  fbe.cpp  flatbuffers.cpp  json.cpp  protobuf.cpp  sbe.cpp  zpp_bits.cpp
include/domain/: domain.fbs  domain.h  domain_generated.h
include/serialization/: exceptions.h  version.h
include/serialization/json/: deserializer.h  deserializer.inl  json.h  parser.h  parser.inl  rapidjson.h  serializer.h  serializer.inl
modules/: CMakeLists.txt  capnproto.cmake  flatbuffers.cmake  protobuf.cmake  rapidjson.cmake  zpp_bits.cmake
performance/: capnproto_deserialize.cpp  capnproto_serialize.cpp  fbe_deserialize.cpp  fbe_serialize.cpp  final_fbe_deserialize.cpp  final_fbe_serialize.cpp  flatbuffers_deserialize.cpp  flatbuffers_serialize.cpp  json_deserialize.cpp  json_parse.cpp  json_serialize.cpp  protobuf_deserialize.cpp  protobuf_serialize.cpp  sbe_deserialize.cpp  sbe_serialize.cpp  zpp_bits_deserialize.cpp  zpp_bits_serialize.cpp  zpp_deserialize.cpp  zpp_serialize.cpp
proto/: trade.capnp  trade.fbe  trade.fbs  trade.h  trade.proto  trade.sbe.sbeir  trade.sbe.xml
proto/capnproto/: trade.capnp.c++  trade.capnp.h
proto/fbe/: fbe.h  trade.cpp  trade.h  trade.inl  trade_final_models.cpp  trade_final_models.h  trade_models.cpp  trade_models.h
proto/flatbuffers/: trade_generated.h
proto/protobuf/: trade.pb.cc  trade.pb.h
proto/sbe/: Account.h  Balance.h  GroupSizeEncoding.h  MessageHeader.h  Order.h  OrderSide.h  OrderType.h  VarStringEncoding.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+30 more)
source/: test.cpp
source/serialization/json/: parser.cpp
tests/: test.cpp  test.h  test_capnproto.cpp  test_fbe.cpp  test_flatbuffers.cpp  test_json.cpp  test_protobuf.cpp  test_sbe.cpp  test_zpp_bits.cpp
